# turn-based-shooter-client

./: .gitignore  Cargo.toml
src/: battle.rs  battle_client.rs  canvas.rs  graphics.rs  input.rs  lib.rs  networking.rs
src/graphics/: camera.rs  canvas.rs  resources.rs  util.rs
www/: index.html  main.js
