[package]
name = "turn-based-shooter-client"
version = "0.1.0"
authors = ["Chris-F5 <christopher-d-lang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
turn-based-shooter-shared = {path = "turn-based-shooter-shared", version = "0.1.0" }
serde = "1.0.120"
serde_json = "1.0"
js-sys = "0.3.46"
bincode = "1.3.1"
console_error_panic_hook = "0.1.6"
console_log = {version = "0.2.0", features = ["color"] }
log = "0.4.13"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "Window",
  "BinaryType",
  "ErrorEvent",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
